[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rbm"
version = "0.0.1"
authors = [
  { name="xllwhoami", email="xllwhoami@example.com" },
]
description = "Racoon Bundle Manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xllwhoami/rbm"
"Bug Tracker" = "https://github.com/xllwhoami/rbm/issues"